# GPS_Reader

./: .gitignore  CMakeLists.txt  README.md
include/: configs.h  datatypes.h  encoder.h  socketHandler.h
lib/: encoder.cpp  socketHandler.cpp
lib/log/src/: log.h
src/: GPSReader.cpp  server.cpp
